// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init() when there are excluded dependencies should emit expected events and execute expected commands 1`] = `
Array [
  Array [
    "npm install",
  ],
  Array [
    "npm outdated --json --long --depth=0",
  ],
]
`;

exports[`init() when there are excluded dependencies should emit expected events and execute expected commands 2`] = `
Array [
  Array [
    "init/start",
    Object {
      "cwd": "/Users/jhnns/dev/peerigon/updtr/test/tasks",
      "exclude": Array [
        "updtr-test-module-1",
        "updtr-test-module-2",
      ],
      "packageManager": "npm",
      "registry": undefined,
      "updateTo": "latest",
    },
  ],
  Array [
    "init/install-missing",
    Object {
      "cmd": "npm install",
      "cwd": "/Users/jhnns/dev/peerigon/updtr/test/tasks",
      "exclude": Array [
        "updtr-test-module-1",
        "updtr-test-module-2",
      ],
      "packageManager": "npm",
      "registry": undefined,
      "updateTo": "latest",
    },
  ],
  Array [
    "init/collect",
    Object {
      "cmd": "npm outdated --json --long --depth=0",
      "cwd": "/Users/jhnns/dev/peerigon/updtr/test/tasks",
      "exclude": Array [
        "updtr-test-module-1",
        "updtr-test-module-2",
      ],
      "packageManager": "npm",
      "registry": undefined,
      "updateTo": "latest",
    },
  ],
  Array [
    "init/end",
    Object {
      "cwd": "/Users/jhnns/dev/peerigon/updtr/test/tasks",
      "exclude": Array [
        "updtr-test-module-1",
        "updtr-test-module-2",
      ],
      "packageManager": "npm",
      "registry": undefined,
      "updateTasks": Array [],
      "updateTo": "latest",
    },
  ],
]
`;

exports[`init() when there are no outdated dependencies should emit expected events and execute expected commands 1`] = `
Array [
  Array [
    "npm install",
  ],
  Array [
    "npm outdated --json --long --depth=0",
  ],
]
`;

exports[`init() when there are no outdated dependencies should emit expected events and execute expected commands 2`] = `
Array [
  Array [
    "init/start",
    Object {
      "cwd": "/Users/jhnns/dev/peerigon/updtr/test/tasks",
      "exclude": Array [],
      "packageManager": "npm",
      "registry": undefined,
      "updateTo": "latest",
    },
  ],
  Array [
    "init/install-missing",
    Object {
      "cmd": "npm install",
      "cwd": "/Users/jhnns/dev/peerigon/updtr/test/tasks",
      "exclude": Array [],
      "packageManager": "npm",
      "registry": undefined,
      "updateTo": "latest",
    },
  ],
  Array [
    "init/collect",
    Object {
      "cmd": "npm outdated --json --long --depth=0",
      "cwd": "/Users/jhnns/dev/peerigon/updtr/test/tasks",
      "exclude": Array [],
      "packageManager": "npm",
      "registry": undefined,
      "updateTo": "latest",
    },
  ],
  Array [
    "init/end",
    Object {
      "cwd": "/Users/jhnns/dev/peerigon/updtr/test/tasks",
      "exclude": Array [],
      "packageManager": "npm",
      "registry": undefined,
      "updateTasks": Array [],
      "updateTo": "latest",
    },
  ],
]
`;

exports[`init() when there are outdated dependencies using npm should emit expected events and execute expected commands 1`] = `
Array [
  Array [
    "npm install",
  ],
  Array [
    "npm outdated --json --long --depth=0",
  ],
]
`;

exports[`init() when there are outdated dependencies using npm should emit expected events and execute expected commands 2`] = `
Array [
  Array [
    "init/start",
    Object {
      "cwd": "/Users/jhnns/dev/peerigon/updtr/test/tasks",
      "exclude": Array [],
      "packageManager": "npm",
      "registry": undefined,
      "updateTo": "latest",
    },
  ],
  Array [
    "init/install-missing",
    Object {
      "cmd": "npm install",
      "cwd": "/Users/jhnns/dev/peerigon/updtr/test/tasks",
      "exclude": Array [],
      "packageManager": "npm",
      "registry": undefined,
      "updateTo": "latest",
    },
  ],
  Array [
    "init/collect",
    Object {
      "cmd": "npm outdated --json --long --depth=0",
      "cwd": "/Users/jhnns/dev/peerigon/updtr/test/tasks",
      "exclude": Array [],
      "packageManager": "npm",
      "registry": undefined,
      "updateTo": "latest",
    },
  ],
  Array [
    "init/end",
    Object {
      "cwd": "/Users/jhnns/dev/peerigon/updtr/test/tasks",
      "exclude": Array [],
      "packageManager": "npm",
      "registry": undefined,
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.1.1",
          "type": "regular",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "1.1.1",
          "type": "regular",
          "updateTo": "2.1.1",
        },
      ],
      "updateTo": "latest",
    },
  ],
]
`;

exports[`init() when there are outdated dependencies using yarn should emit expected events and execute expected commands 1`] = `
Array [
  Array [
    "yarn",
  ],
  Array [
    "yarn outdated --json --flat",
  ],
]
`;

exports[`init() when there are outdated dependencies using yarn should emit expected events and execute expected commands 2`] = `
Array [
  Array [
    "init/start",
    Object {
      "cwd": "/Users/jhnns/dev/peerigon/updtr/test/tasks",
      "exclude": Array [],
      "packageManager": "yarn",
      "registry": undefined,
      "updateTo": "latest",
    },
  ],
  Array [
    "init/install-missing",
    Object {
      "cmd": "yarn",
      "cwd": "/Users/jhnns/dev/peerigon/updtr/test/tasks",
      "exclude": Array [],
      "packageManager": "yarn",
      "registry": undefined,
      "updateTo": "latest",
    },
  ],
  Array [
    "init/collect",
    Object {
      "cmd": "yarn outdated --json --flat",
      "cwd": "/Users/jhnns/dev/peerigon/updtr/test/tasks",
      "exclude": Array [],
      "packageManager": "yarn",
      "registry": undefined,
      "updateTo": "latest",
    },
  ],
  Array [
    "init/end",
    Object {
      "cwd": "/Users/jhnns/dev/peerigon/updtr/test/tasks",
      "exclude": Array [],
      "packageManager": "yarn",
      "registry": undefined,
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.1.1",
          "type": "regular",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "1.1.1",
          "type": "regular",
          "updateTo": "2.1.1",
        },
      ],
      "updateTo": "latest",
    },
  ],
]
`;
